Stop the chat box from overflowing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -614,7 +614,7 @@ body {
   background-color: #f5f5f5;
   margin: 20px;
   max-height: 246.39px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .send-message-btn {
